Import of STEFANT/WWW-phpBB-0.02 from CPAN.
gitpan-cpan-distribution: WWW-phpBB
gitpan-cpan-version:      0.02
gitpan-cpan-path:         STEFANT/WWW-phpBB-0.02.tar.gz
gitpan-cpan-author:       STEFANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,7 @@ Revision history for Perl extension WWW::phpBB.
 	- original version; created by h2xs 1.23 with options
 		-XAn WWW::phpBB
 
+0.02 
+     	- parallel fetching of topics
+	- removed Perl version requirement
+	
