--- a/Changes
+++ b/Changes
@@ -1,10 +1,15 @@
 Revision history for Perl extension WWW::phpBB.
 
-0.01  Sat May 27 15:34:10 2006
-	- original version; created by h2xs 1.23 with options
-		-XAn WWW::phpBB
+0.03  Sun Jan 09 18:40:17 2011
+	- more parameters to control custom URL schemes
+	- got rid of the WWW::Mechanize wrapper
+	- max_children defaults to 1
 
 0.02 
      	- parallel fetching of topics
 	- removed Perl version requirement
 	
+0.01  Sat May 27 15:34:10 2006
+	- original version; created by h2xs 1.23 with options
+		-XAn WWW::phpBB
+
