--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WWW::phpBB.
 
+0.05  Tue Jan 18 22:13:50 2011
+	- fix pod
+
 0.04  Tue Jan 18 20:40:09 2011
 	- exception handling in the parallelization code
 	- more configuration knobs
