--- a/README
+++ b/README
@@ -42,6 +42,7 @@ TODO
 COPYRIGHT AND LICENSE
 
 Copyright (c) 2006-2011 by Stefan Talpalaru - <stefantalpalaru@yahoo.com>
+[ email tied to a paypal account in case you want to buy me a cup of tea ;-) ]
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.12.2 or,
