Import of STEFANT/WWW-phpBB-0.07 from CPAN.
gitpan-cpan-distribution: WWW-phpBB
gitpan-cpan-version:      0.07
gitpan-cpan-path:         STEFANT/WWW-phpBB-0.07.tar.gz
gitpan-cpan-author:       STEFANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension WWW::phpBB.
 
+0.07  Tue Jan 27 20:12:10 2011
+	- fix page navigation when not all the pages are shown in the menu
 
 0.06  Tue Jan 22 01:27:11 2011
 	- create groups for the scraped users
