Import of STEFANT/WWW-phpBB-0.08 from CPAN.
gitpan-cpan-distribution: WWW-phpBB
gitpan-cpan-version:      0.08
gitpan-cpan-path:         STEFANT/WWW-phpBB-0.08.tar.gz
gitpan-cpan-author:       STEFANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WWW::phpBB.
 
+0.08  Sat Feb 05 22:05:38 2011
+	- more flexible user profile scraping
+
 0.07  Tue Jan 27 20:12:10 2011
 	- fix page navigation when not all the pages are shown in the menu
 
